--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -10,9 +10,19 @@
       crossorigin="anonymous">
   </head>
   <body>
+    @using HairSalon.Models;
+
     <h1>Hair Salon</h1>
+
+    @if (Model.Count == 0)
+    {
+          <p>There are no clients in the list.</p>
+    }
     <ul>
-      <li>@Model.Description</li>
+        @foreach (Client client in Model)
+        {
+            <li>@client.Description</li>
+        }
     </ul>
     <a href="/clients/new">Add a new client.</a>
   </body>
