--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -1,29 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>My Hair Salon!</title>
-    <link 
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
-      rel="stylesheet" 
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
-      crossorigin="anonymous">
-  </head>
-  <body>
-    @using HairSalon.Models;
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+</head>
 
-    <h1>Hair Salon</h1>
+<body>
+    <h1>Welcome to the Hair Salon!</h1>
+    <a href='/clients/new'>Add a new client</a>
+    <br>
+    <a href='/clients'>See list of clients</a>
+</body>
 
-    @if (Model.Count == 0)
-    {
-          <p>There are no clients in the list.</p>
-    }
-    <ul>
-        @foreach (Client client in Model)
-        {
-            <li>@client.Description</li>
-        }
-    </ul>
-    <a href="/clients/new">Add a new client.</a>
-  </body>
 </html>
