--- a/HairSalon/Views/Clients/Index.cshtml
+++ b/HairSalon/Views/Clients/Index.cshtml
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-    <title>My Hair Salon!</title>
+  <title>My Hair Salon!</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
@@ -24,6 +24,10 @@
     }
   </ul>
   <a href="/clients/new">Add a new client.</a>
+
+  <form action="/clients/delete" method="post">
+    <button type="submit" name="button">Clear All Clients</button>
+  </form>
 </body>
 
 </html>
