--- a/HairSalon/Views/Clients/Index.cshtml
+++ b/HairSalon/Views/Clients/Index.cshtml
@@ -12,7 +12,6 @@
   @using HairSalon.Models;
 
   <h1>Hair Salon</h1>
-
   @if (Model.Count == 0)
   {
     <p>There are no clients in the list.</p>
@@ -20,9 +19,10 @@
   <ul>
     @foreach (Client client in Model)
     {
-      <li>@client.Description</li>
+      <li><a href='/clients/@client.Id'>@client.Description</a></li>
     }
   </ul>
+
   <a href="/clients/new">Add a new client.</a>
 
   <form action="/clients/delete" method="post">
