--- a/HairSalon/Views/Clients/New.cshtml
+++ b/HairSalon/Views/Clients/New.cshtml
@@ -3,16 +3,19 @@
 
 <head>
     <meta charset="utf-8">
-    <title>My Hair Salon!</title>
+    <title>My Hair Salon</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 
 <body>
-    <form action="/clients" method="post">
-        <label for="description">Add a new client</label>
-        <input id="description" name="description" type="text">
-        <button type="submit">Submit</button>
+    <h1>Add a new client to @Model.Name</h1>
+
+    <form action="/stylists/@Model.Id/clients" method="post">
+        <input id="stylistId" name="stylistId" type="hidden" value="@Model.Id">
+        <label for="clientDescription">Client Description</label>
+        <input id="clientDescription" name="clientDescription" type="text">
+        <button type='submit'>Add Client</button>
     </form>
 </body>
 
