--- a/HairSalon/Views/Clients/Show.cshtml
+++ b/HairSalon/Views/Clients/Show.cshtml
@@ -1,21 +1,10 @@
-<!DOCTYPE html>
-<html>
+@{
+    Layout = "_Layout";
+}
+<h1>Hair Salon Client Details: </h1>
 
-<head>
-    <meta charset="utf-8">
-    <title>My Hair Salon</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-</head>
+<h2>@Model["client"].Description</h2>
+<h3>Stylist: @Model["stylist"].Name</h3>
 
-<body>
-    <h1>Hair Salon Client Details: </h1>
-
-    <h2>@Model["client"].Description</h2>
-    <h3>Stylist: @Model["stylist"].Name</h3>
-
-    <a href='/stylists/@Model["stylist"].Id/clients/new'>Add another client</a>
-    <a href='/stylists'>View all stylists</a>
-</body>
-
-</html>
+<a href='/stylists/@Model["stylist"].Id/clients/new'>Add another client</a>
+<a href='/stylists'>View all stylists</a>
