--- a/HairSalon/Views/Stylists/Index.cshtml
+++ b/HairSalon/Views/Stylists/Index.cshtml
@@ -1,14 +1,6 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <title>My Hair Salon!</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-</head>
-
-<body>
+@{
+  Layout = "_Layout";
+}
     @using HairSalon.Models;
 
     <h1>Stylists</h1>
@@ -24,6 +16,3 @@
     }
 
     <p><a href='/'>Back home</a></p>
-</body>
-
-</html>
