--- a/HairSalon/Views/Stylists/New.cshtml
+++ b/HairSalon/Views/Stylists/New.cshtml
@@ -1,14 +1,6 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <title>My Hair Salon!</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-</head>
-
-<body>
+@{
+  Layout = "_Layout";
+}
     <h1>Add a stylist</h1>
     <p>Add a stylist here:</p>
 
@@ -20,6 +12,3 @@
 
     <p><a href="/">Back home</a></p>
     <p><a href="/stylists">Back to stylists.</a></p>
-</body>
-
-</html>
