--- a/HairSalon/Views/Stylists/Show.cshtml
+++ b/HairSalon/Views/Stylists/Show.cshtml
@@ -1,15 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>My Hair Salon!</title>
-    <link 
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
-      rel="stylesheet" 
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
-      crossorigin="anonymous">
-  </head>
-  <body>
+@{
+  Layout = "_Layout";
+}
     @using HairSalon.Models;
 
     <h3>Here are all the clients in this stylist:</h3>
@@ -24,5 +15,3 @@
     <p><a href='/stylists/@Model["stylist"].Id/clients/new'>Add a new client</a></p>
     <p><a href='/stylists'>Return to stylist list</a></p>
     <p><a href='/'>Return to Main Page</a></p>
-  </body>
-</html>
