setup efcore and remove stylist model and test directory

--- a/HairSalon/Views/Clients/New.cshtml
+++ b/HairSalon/Views/Clients/New.cshtml
@@ -1,4 +1,4 @@
-@{
+@* @{
     Layout = "_Layout";
 }
 <h1>Add a new client to @Model.Name</h1>
@@ -8,4 +8,4 @@
     <label for="clientDescription">Client Description</label>
     <input id="clientDescription" name="clientDescription" type="text">
     <button type='submit'>Add Client</button>
-</form>
+</form> *@
