--- a/HairSalon/Views/Clients/Show.cshtml
+++ b/HairSalon/Views/Clients/Show.cshtml
@@ -1,4 +1,4 @@
-@{
+@* @{
     Layout = "_Layout";
 }
 <h1>Hair Salon Client Details: </h1>
@@ -7,4 +7,4 @@
 <h3>Stylist: @Model["stylist"].Name</h3>
 
 <a href='/stylists/@Model["stylist"].Id/clients/new'>Add another client</a>
-<a href='/stylists'>View all stylists</a>
+<a href='/stylists'>View all stylists</a> *@
