--- a/HairSalon/Views/Stylists/Index.cshtml
+++ b/HairSalon/Views/Stylists/Index.cshtml
@@ -1,4 +1,4 @@
-@{
+@* @{
   Layout = "_Layout";
 }
     @using HairSalon.Models;
@@ -15,4 +15,4 @@
         <h3><a href='/stylists/@stylist.Id'>@stylist.Name</a></h3>
     }
 
-    <p><a href='/'>Back home</a></p>
+    <p><a href='/'>Back home</a></p> *@
