--- a/HairSalon/Views/Stylists/New.cshtml
+++ b/HairSalon/Views/Stylists/New.cshtml
@@ -1,4 +1,4 @@
-@{
+@* @{
   Layout = "_Layout";
 }
     <h1>Add a stylist</h1>
@@ -11,4 +11,4 @@
     </form>
 
     <p><a href="/">Back home</a></p>
-    <p><a href="/stylists">Back to stylists.</a></p>
+    <p><a href="/stylists">Back to stylists.</a></p> *@
