--- a/HairSalon/Views/Stylists/Show.cshtml
+++ b/HairSalon/Views/Stylists/Show.cshtml
@@ -1,4 +1,4 @@
-@{
+@* @{
   Layout = "_Layout";
 }
     @using HairSalon.Models;
@@ -14,4 +14,4 @@
 
     <p><a href='/stylists/@Model["stylist"].Id/clients/new'>Add a new client</a></p>
     <p><a href='/stylists'>Return to stylist list</a></p>
-    <p><a href='/'>Return to Main Page</a></p>
+    <p><a href='/'>Return to Main Page</a></p> *@
