--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -1,7 +1,6 @@
 @{
   Layout = "_Layout";
 }
-    <h1>Welcome to the Hair Salon!</h1>
-    <h3><a href='/stylists'>View stylists</a></h3>
-    <br>
-    <h3><a href='/stylists/new'>Add a new stylist</a></h3>
+
+<h1>Welcome to the Hair Salon!</h1>
+<p>@Html.ActionLink("See all clients", "Index", "Clients")</p> 
