--- a/HairSalon/Views/Clients/Create.cshtml
+++ b/HairSalon/Views/Clients/Create.cshtml
@@ -4,11 +4,11 @@
 
 @model HairSalon.Models.Client
 
-<h4>Add a new task</h4>
+<h4>Add a new client</h4>
 @using (Html.BeginForm())
 {
   @Html.LabelFor(model => model.Description)
   @Html.TextBoxFor(model => model.Description)
-  <input type="submit" value="Add new task" />
+  <input type="submit" value="Add new client" />
 }
 <p>@Html.ActionLink("Show all clients", "Index")</p>
