--- a/HairSalon/Views/Stylists/Index.cshtml
+++ b/HairSalon/Views/Stylists/Index.cshtml
@@ -1,18 +1,23 @@
-@* @{
+@{
   Layout = "_Layout";
 }
-    @using HairSalon.Models;
 
-    <h1>Stylists</h1>
+@using HairSalon.Models;
 
-    @if (@Model.Count == 0)
-    {
-        <h3>No stylists have been added yet!</h3>
-    }
+<h1>Stylists</h1>
 
-    @foreach (Stylist stylist in Model)
-    {
-        <h3><a href='/stylists/@stylist.Id'>@stylist.Name</a></h3>
-    }
+@if (@Model.Count == 0)
+{
+  <h3>No stylists have been added yet!</h3>
+} 
 
-    <p><a href='/'>Back home</a></p> *@
+<ul>
+  @foreach(Stylist stylist in Model)
+  {
+    <li>@Html.ActionLink($"{stylist.Name}", "Details", new { id = stylist.StylistId })</li>
+  }
+</ul>
+
+<p>@Html.ActionLink("Add new stylist", "Create")</p>
+<p>@Html.ActionLink("Add new Client", "Create", "Clients")</p>
+<p>@Html.ActionLink("Home", "Index", "Home")</p>
